# contract-sdk-cpp

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh
.github/workflows/: ci.yml  publish-image.yml
example/: award_manage.cc  counter.cc  erc20.cc  features.cc  group_chain.cc  hash_deposit.cc  luck_draw.cc  move.cc  short_content.cc  source_trace.cc
example/sanitizer_case/src/: main.cc
example/sanitizer_case/test/: sanitizer_case.test.js
reserved/: unified_check.cc
scripts/: emcc.Dockerfile
src/xchain/: basic_iterator.cc  block.cc  block.h  context_impl.cc  context_impl.h  contract.pb.cc  contract.pb.h  xchain.h
src/xchain/table/: table.h
test/: crypto.test.js  features.test.js  game_assets.test.js  xuper_relay.test.js
